<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2013, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *        * Redistributions of source code must retain the above copyright
 *            notice, this list of conditions and the following disclaimer.
 *        * Redistributions in binary form must reproduce the above copyright
 *            notice, this list of conditions and the following disclaimer in the
 *            documentation and/or other materials provided with the distribution.
 *        * Neither the name of The Linux Foundation nor
 *            the names of its contributors may be used to endorse or promote
 *            products derived from this software without specific prior written
 *            permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT ARE DISCLAIMED.    IN NO EVENT SHALL THE COPYRIGHT OWNER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
-->
<resources>

    <string name="off">OFF</string>
    <string name="mild">MILD</string>
    <string name="high">HIGH</string>
    <string name="link">Link Loss Level</string>
    <string name="path">Path Loss Level</string>
    <string name="threshold">Set threshold</string>
    <string name="threshold_min">Min threshold</string>
    <string name="threshold_max">Max threshold</string>
    <string name="app_name">Proximity Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_stop">Stop</string>
    <string name="connected">Connected devices</string>
    <string name="paired">Connect to paired dvice</string>
    <string name="scan">Scan for a device</string>
    <string name="connect_to">Connect to device</string>
    <string name="history">Alert history</string>
    <string name="device_address">Connect to</string>
    <string name="title">Insert bluetooth device address</string>
    <string name="connect">Connect</string>

</resources>